--- a/box model.html
+++ b/box model.html
@@ -1,1 +1,79 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Box Model</title>
+</head>
+<body>
+
+    <style>
+        body{
+            background-color: #f7f7f7;
+            margin: 0;
+            padding: 0;
+        }
+        .container{
+            width: 80%;
+            margin: auto;
+        }
+        nav{
+            background-color: #8f8f8f;
+            padding: 3px 0;
+            width: 100%;
+        }
+        ul{
+            display: flex;
+            justify-content: space-around;
+            width: 2;
+        }
+        li{
+            display: inline-block;
+            font-size: 19px;
+            width: 10%;
+        }
+        li a{
+            color: white;
+            text-decoration: none;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        .headline{
+            background-image: url(../../WPU/HTML/img/logo.png);
+            background-position: 10% 40%;
+            background-size: cover;
+            width: 100%;
+            height: 300px;
+            position: relative;
+        }
+        .warna1 , .warna2{
+            position: absolute;
+            width: 100%;
+            height: 5px;
+        }
+        .warna1{
+            bottom: 0;
+            background-image: linear-gradient(90deg,rgb(248, 41, 255),rgb(102, 6, 255));
+        }
+        .warna2{
+            top: 0;
+            background-image: linear-gradient(-90deg,rgb(248, 41, 255),rgb(255, 64, 6));
+        }
+    </style>
+
+    <div class="container">
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Inventory</a></li>
+                <li><a href="#">Profile</a></li>
+            </ul>
+        </nav>
+
+        <div class="headline">
+            <div class="warna1"></div>
+            <div class="warna2"></div>
+        </div>
+    </div>
+</body>
+</html>
