--- a/box model.html
+++ b/box model.html
@@ -16,6 +16,8 @@
         .container{
             width: 80%;
             margin: auto;
+            box-shadow: 0 0 4px #dddddd;
+            position: relative;
         }
         nav{
             background-color: #8f8f8f;
@@ -58,6 +60,32 @@
             top: 0;
             background-image: linear-gradient(-90deg,rgb(248, 41, 255),rgb(255, 64, 6));
         }
+        img{
+            width: 250px;
+            float: left;
+            margin-right: 10px;
+        }
+        .judul{
+            margin-top: -15px;
+            margin-left: -20px;
+        }
+        .badan{
+            margin-top: -15px;
+            padding: 0 20px 10px;
+            width: 70%;
+        }
+        .badan p{
+            text-indent: 20px;
+        }
+        .sidebar{
+            width: 25%;
+            border: solid 1px;
+            position: absolute;
+            right: 0;
+            bottom: 350px;
+            margin-right: 10px;
+        }
+
     </style>
 
     <div class="container">
@@ -73,6 +101,18 @@
         <div class="headline">
             <div class="warna1"></div>
             <div class="warna2"></div>
+        </div>
+
+        <div class="badan">
+            <h2>Are You Human?</h2>
+            <p class="judul">Dibuat oleh <a href="https://instagram.com/ikramwadudu">manusia</a></p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus dolorum, enim deleniti at, officia pariatur eaque voluptas adipisci fugit eius, voluptate excepturi ab harum. Quibusdam repellat voluptas, dolore ab, exercitationem eum sint architecto cumque harum enim doloremque. Quod debitis blanditiis expedita molestias vero fuga assumenda molestiae officia perferendis cumque dolorem vel magnam ratione placeat quam eos totam, dicta nam necessitatibus vitae. Asperiores sapiente nobis repellendus temporibus iusto dolores qui assumenda quasi neque voluptas recusandae ducimus commodi voluptatibus, aut soluta numquam quidem corporis eius laboriosam? Aspernatur delectus sint quaerat error recusandae, exercitationem dignissimos accusamus, explicabo totam consectetur ad vel molestiae? Tenetur!</p>
+            <img src="img/cika.jpeg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident doloremque atque delectus saepe doloribus expedita qui fugiat suscipit et voluptatem! Pariatur nemo est, sit quisquam quam dicta voluptate. Neque sit inventore cum vero pariatur amet accusamus quidem porro dolorum nulla, tempora veritatis delectus deleniti error eaque eius fuga a dignissimos ipsum hic necessitatibus provident reiciendis! Quas, natus tenetur! Minima exercitationem, modi enim illo eveniet earum eos, quos ut, ea provident fugiat quod sapiente. Maiores distinctio et vel expedita consectetur assumenda voluptate eum voluptatum maxime, dolor magnam. Dolorum delectus ex pariatur ratione perspiciatis placeat at debitis! Sequi provident error veritatis asperiores corrupti officia recusandae voluptates est quidem itaque? A odio earum ipsum. Illum laudantium aspernatur temporibus amet omnis nam explicabo at.</p>
+        </div>
+        <div class="sidebar">
+            <p style="text-align: center; margin-top: 1px;">IKLAN</p>
         </div>
     </div>
 </body>
