Membuat Rensponsive Untuk Iklan Part 1

--- a/box model.html
+++ b/box model.html
@@ -21,7 +21,7 @@
             width: 80%;
             margin: auto;
             box-shadow: 0 0 4px #dddddd;
-           
+           position: relative;
         }
         nav{
             background-color: #8f8f8f;
@@ -110,7 +110,8 @@
             border: solid 1px;
             height: 150px;
             margin: 70px 10px 0 0;
-            float: right;
+            position: absolute;
+            right: 0;
         }
         .oyeh{
             background-image: linear-gradient(90deg,rgb(0, 247, 255),rgb(255, 0, 255));
@@ -221,7 +222,6 @@
                 filter: hue-rotate(360deg);
             }
         }
-
 
     </style>
 
